--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 PORT=1100
-DATABASE=mongodb+srv://juanbuelvas:admin123@resortjb.d0a5guf.mongodb.net/?retryWrites=true&w=majority
+DATABASE=mongodb+srv://isabellopez:admin123@seahotel.xzox5oj.mongodb.net/?retryWrites=true&w=majority
